emotional expression. Gif hover/click depends on window width

--- a/app/templates/episode_page.html
+++ b/app/templates/episode_page.html
@@ -528,6 +528,7 @@
                  $(this).attr("src", "/static/Images/tr_image_emotional_expression_Scorsese_static.jpg");
              }
          );
+         $('#emotional_expression_gif').html('hover');
        }
     else {
       $('#polanski_gif').on({
@@ -538,6 +539,7 @@
             $(this).attr('src', src);
        }
    });
+   $('#emotional_expression_gif').html('click');
     }
    });
 
