all transcripts now has {{config.AWS_URL}} for images. moved 'json_files' to 'app/' as well.

--- a/app/templates/knowitwall.html
+++ b/app/templates/knowitwall.html
@@ -16,7 +16,7 @@
   <meta property="og:title" content="Know It Wall" />
   <meta property="og:description" content="Know it Wall is a place for inquisitive minds. From sciences to arts, let world-class researchers excite your curiosity." />
   <meta property="og:url" content="http://knowitwall.com/" />
-  <link rel="icon" href="http://knowitwall.com/static/Images/KIW-thumbnail_logo.png" type="image/gif" sizes="16x16">
+  <link rel="icon" href="{{config.AWS_URL}}/static/Images/KIW-thumbnail_logo.png" type="image/gif" sizes="16x16">
 <!-- pens -->
 
   <title>Know it Wall | home page</title>
