got more images in various templates to point to S3

--- a/app/templates/archive_page.html
+++ b/app/templates/archive_page.html
@@ -10,12 +10,12 @@
   <meta name="description" content="Browse through all the Knowitwall episodes">
   <meta name="keywords" content="Knowitwall, Know It Wall, audio-documentary, audiodoc, outreach, academia, insightful, science, humanities">
   <meta name="author" content="">
-  <meta property="og:image" content="https://pbs.twimg.com/profile_banners/3297484981/1450923489/1500x500" />
+  <meta property="og:image" content="{{config.AWS_URL}}/static/Images/KiW_banner.jpg" />
   <meta property="og:title" content="Knowitwall episodes" />
   <meta property="og:description" content="Browse through all the Knowitwall episodes" />
   <meta property="og:url" content="http://knowitwall.com/all_episodes" />
   <meta property=”og:type” content=”website” />
-  <link rel="icon" href="http://knowitwall.com/static/Images/KIW-thumbnail_logo.png" type="image/gif" sizes="16x16">
+  <link rel="icon" href="{{config.AWS_URL}}/static/Images/KIW-thumbnail_logo.png" type="image/gif" sizes="16x16">
 <!-- pens -->
 
   <title>All episodes | Know it Wall</title>
