--- a/app/templates/terms.html
+++ b/app/templates/terms.html
@@ -10,11 +10,11 @@
   <meta name="description" content="We make short audio documentaries, written by academics, for the enjoyment of everyone else.">
   <meta name="keywords" content="Knowitwall, Know It Wall, audio-documentary, audiodoc, outreach, academia, insightful, science, humanities">
   <meta name="author" content="">
-  <meta property="og:image" content="http://knowitwall.com/static/Images/KIW-thumbnail_logo.png" />
+  <meta property="og:image" content="{{config.AWS_URL}}/static/Images/KIW-thumbnail_logo.png" />
   <meta property="og:title" content="Know It Wall" />
   <meta property="og:description" content="If you have more interests than you can keep track of, you’re in the right place. Know It Wall makes short audio documentaries, written by academics, for the enjoyment of everyone." />
   <meta property="og:url" content="http://knowitwall.com/" />
-  <link rel="icon" href="http://knowitwall.com/static/Images/KIW-thumbnail_logo.png" type="image/gif" sizes="16x16">
+  <link rel="icon" href="{{config.AWS_URL}}/static/Images/KIW-thumbnail_logo.png" type="image/gif" sizes="16x16">
 <!-- pens -->
 
   <title>Know it Wall</title>
