--- a/app/templates/episode_page.html
+++ b/app/templates/episode_page.html
@@ -10,12 +10,12 @@
   <meta name="description" content="{{audiodocs[0].topic_description}}">
   <meta name="keywords" content="Knowitwall, Know It Wall, audio-documentary, audiodoc, outreach, academia, insightful, science, humanities">
   <meta name="author" content="">
-  <meta property="og:image" content="http://knowitwall.com/{{ audiodocs[0].topic_image }}" />
+  <meta property="og:image" content="{{ audiodocs[0].topic_image }}" />
   <meta property="og:title" content="{{audiodocs[0].topic_name | safe}}{% if audiodocs[0].video_embed %} [Video]{% elif audiodocs[0].audio_mp3 %} [Audio]{% else %}{% endif %}"/>
   <meta property="og:description" content="{{audiodocs[0].topic_description | safe}}" />
   <meta property="og:url" content="http://knowitwall.com/audiodoc/{{audiodocs.url}}" />
   <meta property=”og:type” content=”website” />
-  <link rel="icon" href="http://knowitwall.com/static/Images/KIW-thumbnail_logo.png" type="image/gif" sizes="16x16">
+  <link rel="icon" href="{{config.AWS_URL}}/static/Images/KIW-thumbnail_logo.png" type="image/gif" sizes="16x16">
 <!-- pens -->
 
   <title>{{audiodocs[0].topic_name}} | Know it Wall</title>
