--- a/app/templates/knowitwall.html
+++ b/app/templates/knowitwall.html
@@ -12,7 +12,7 @@
   <meta name="description" content="Know it Wall is a place for inquisitive minds. From sciences to arts, let world-class researchers excite your curiosity.">
   <meta name="keywords" content="Knowitwall, Know It Wall, audio-documentary, audiodoc, outreach, academia, insightful, science, humanities">
   <meta name="author" content="">
-  <meta property="og:image" content="https://pbs.twimg.com/profile_banners/3297484981/1450923489/1500x500" />
+  <meta property="og:image" content="{{config.AWS_URL}}/static/Images/KiW_banner.jpg"/>
   <meta property="og:title" content="Know It Wall" />
   <meta property="og:description" content="Know it Wall is a place for inquisitive minds. From sciences to arts, let world-class researchers excite your curiosity." />
   <meta property="og:url" content="http://knowitwall.com/" />
