--- a/app/static/css/about_page.css
+++ b/app/static/css/about_page.css
@@ -49,7 +49,7 @@ h3{
   padding-left: 4em;
 }
 .flash_sem_episode-title{
-  font-size: 3em;
+  font-size: 34px;
   font-family: 'Lato';
   font-weight: 300;
   color: #33353d;
@@ -71,18 +71,37 @@ h3{
   background-color: white;
   border: 1px solid #bdbdbd;
   border-radius: 8px;
+  width: 80%;
+  margin-left: 10%;
+  padding: 20px;
 }
 .flash_sem_sessions_title{
   text-transform: none;
   font-style: italic;
   text-align: center;
   font-size: 26px;
+  margin-bottom: 25px;
 }
 .flash_sem_session_info{
   text-align: center;
-  margin: 0 25px;
+  margin: 10 25px;
 }
 .flash_sem_session_date-place > p{
   font-style: italic;
   font-size: 15px;
+  color: #737373;
+}
+.flash_sem_topic_description{
+  margin-top: 30px;
+  width: 80%;
+  margin-left: 10%;
+}
+
+.flash_sem_author_image{
+  width: 100%;
+}
+.upcoming_session{
+  text-decoration: underline;
+  color: rgba(51, 53, 61, 0.62);
+  margin: 25px 10%
 }
