--- a/app/static/css/about_page.css
+++ b/app/static/css/about_page.css
@@ -2,6 +2,7 @@
   margin-top: 70px;
   text-align: center;
   background-color: #f5f5f5;
+  padding-bottom: 90px;
 }
 .about_title{
   font-size: 57px;
