--- a/app/templates/knowitwall.html
+++ b/app/templates/knowitwall.html
@@ -29,7 +29,7 @@
 
   <!-- Custom Fonts -->
   <link href="/static/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-  <link href="http://fonts.googleapis.com/css?family=Lato:100,300,300italic,400,400italic," rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300italic,400,400italic," rel="stylesheet" type="text/css">
 
 
   <!-- google analytics for jeremie.coullon@gmail.com -->
