--- a/app/templates/about_page.html
+++ b/app/templates/about_page.html
@@ -27,7 +27,7 @@
   <link href="/static/css/archive_extra.css" rel="stylesheet">
 
   <link href="/static/css/archive_page.css" rel="stylesheet">
-  
+
   <link href="/static/css/about_page.css" rel="stylesheet">
   <!-- Custom Fonts -->
   <link href="/static/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -274,9 +274,9 @@ hidden
       </div>
       <div class="col-md-8">
         <div class="vertical-line_left about_description">
-        <p class = 'justify'>Know it Wall (KiW) is a place for inquisitive minds. From sciences to arts, let world-class researchers excite your curiosity.</p>
+        <p class = 'justify'>It is estimated that well over two million academic papers are published each year and there are countless more university lectures. Who is accessing this knowledge? Academics within the same disciplines and their students. Why should it only be them? We couldn't think of a good reason either!</p>
         <br>
-        <p class = 'justify'>Based at UCL and Imperial College London, KiW works with academics to make audio and video documentaries, as well as short articles, that explain what is cool or interesting about the subjects they dedicate their lives to. From <i>Stegosaurus</i> to Shakespeare, protons to pandemics, there’s no limit to what you could encounter!</p>
+        <p class = 'justify'>KiW's aim is to take the research that is going on at top universities and present it to the general public in an accessible and engaging way. At KiW, you will find audio and video documentaries, as well as short articles, about the latest research in the humanities and sciences -- all written by academics actively doing research in those fields.</p>
         </div>
       </div>
     </div>
@@ -295,9 +295,9 @@ hidden
 
       <div class="col-md-8 col-md-pull-4">
         <div class="vertical-line_right about_description">
-        <p class = 'justify'>Know it Wall blablabla words so many lorem words on repeat so many lorem words on repeat so many lorem words on repeat so lelelolo many lorem words on repeat</p>
-        <br>
-        <p class = 'justify'>Based at UCL and other places lalal alala moar words on repeat alala moar words on repeat alala moar words on repeat alala moar stuff stuff repeat alala moar words on repeat </p>
+        <p class = 'justify'>Academics send us an article of about 1000 words and we make sure it is delivered in a language that is accessible for the general public. We then turn their article into a short documentary (in audio, video or both), and release the documentary and the article on this website as well as on iTunes, Soundcloud, YouTube and Medium.</p>
+        <!-- <br> -->
+        <!-- <p class = 'justify'>Based at UCL and other places lalal alala moar words on repeat alala moar words on repeat alala moar words on repeat alala moar stuff stuff repeat alala moar words on repeat </p> -->
         </div>
       </div>
 
