earth habitable update

--- a/app/templates/archive_page.html
+++ b/app/templates/archive_page.html
@@ -13,7 +13,7 @@
   <meta property="og:image" content="{{config.AWS_URL}}/static/Images/KiW_banner.jpg" />
   <meta property="og:title" content="Knowitwall episodes" />
   <meta property="og:description" content="Browse through all the Knowitwall episodes" />
-  <meta property="og:url" content="http://knowitwall.com/all_episodes" />
+  <meta property="og:url" content="http://knowitwall.com/{{url_for('archive')}}" />
   <meta property=”og:type” content=”website” />
   <link rel="icon" href="{{config.AWS_URL}}/static/Images/KIW-thumbnail_logo.png" type="image/gif" sizes="16x16">
 <!-- pens -->
