--- a/app/templates/episode_page.html
+++ b/app/templates/episode_page.html
@@ -258,7 +258,7 @@
         <ul class="nav navbar-nav navbar-right">
           <li>
             <!-- <a href="/all_episodes">All Episodes</a> -->
-            <a href="/all_episodes" id="all_episodes">All Episodes</a>
+            <a href="{{url_for('archive')}}" id="all_episodes">All Episodes</a>
           </li>
           <li class="navbar_hamburger">
             <a href="https://www.facebook.com/KnowitWall/" target="_blank"><i class="fa fa-fw fa-facebook"></i></a>
