--- a/app/templates/knowitwall.html
+++ b/app/templates/knowitwall.html
@@ -274,7 +274,7 @@
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li>
-            <a href="/all_episodes" id="all_episodes">All Episodes</a>
+            <a href="{{url_for('archive')}}" id="all_episodes">All Episodes</a>
           </li>
           <li>
             <a href="https://www.facebook.com/KnowitWall/" target="_blank" class=""><i class="fa fa-fw fa-facebook"></i></a>
