--- a/app/templates/about_page.html
+++ b/app/templates/about_page.html
@@ -240,6 +240,9 @@ hidden
 
         <ul class="nav navbar-nav navbar-right">
           <li class="page-scroll">
+            <a href="#flash_seminars">Flash Seminars</a>
+          </li>
+          <li class="page-scroll">
             <a href="/all_episodes" >All Episodes</a>
           </li>
           <li class="navbar_hamburger">
@@ -267,13 +270,13 @@ hidden
 <section class="about_block_1" id="about-block_1">
   <div class="container">
     <div class="row">
-      <div class="col-md-4 text-center">
+      <div class="col-md-4 col-md-push-8 text-center">
         <div id="about_page-left">
         <h3 class="about_title_1">A place for inquisitive minds</h3>
         </div>
       </div>
-      <div class="col-md-8">
-        <div class="vertical-line_left about_description">
+      <div class="col-md-8 col-md-pull-4">
+        <div class="vertical-line_right about_description">
         <p class = 'justify'>It is estimated that well over two million academic papers are published each year and there are countless more university lectures. Who is accessing this knowledge? Academics within the same disciplines and their students. Why should it only be them? We couldn't think of a good reason either!</p>
         <br>
         <p class = 'justify'>KiW's aim is to take the research that is going on at top universities and present it to the general public in an accessible and engaging way. At KiW, you will find audio and video documentaries, as well as short articles, about the latest research in the humanities and sciences -- all written by academics actively doing research in those fields.</p>
@@ -287,17 +290,15 @@ hidden
   <div class="container">
     <div class="row">
 
-      <div class="col-md-4 col-md-push-8 text-center">
+      <div class="col-md-4 text-center">
         <div id="about_page-right">
         <h3>How does it work?</h3>
         </div>
       </div>
 
-      <div class="col-md-8 col-md-pull-4">
-        <div class="vertical-line_right about_description">
+      <div class="col-md-8 ">
+        <div class="vertical-line_left about_description">
         <p class = 'justify'>Academics send us an article of about 1000 words and we make sure it is delivered in a language that is accessible for the general public. We then turn their article into a short documentary (in audio, video or both), and release the documentary and the article on this website as well as on iTunes, Soundcloud, YouTube and Medium.</p>
-        <!-- <br> -->
-        <!-- <p class = 'justify'>Based at UCL and other places lalal alala moar words on repeat alala moar words on repeat alala moar words on repeat alala moar stuff stuff repeat alala moar words on repeat </p> -->
         </div>
       </div>
 
@@ -307,7 +308,7 @@ hidden
   </div>
 </section>
 
-<section class="">
+<section id="flash_seminars">
   <div class="container">
 
     <div class="row">
