--- a/app/templates/knowitwall.html
+++ b/app/templates/knowitwall.html
@@ -396,6 +396,9 @@
               <br>
               <p class = 'justify'>Based at UCL and Imperial College London, KiW works with academics to make audio and video documentaries, as well as short articles, that explain what is cool or interesting about the subjects they dedicate their lives to. From <i>Stegosaurus</i> to Shakespeare, protons to pandemics, there’s no limit to what you could encounter!</p>
               </div>
+              <div>
+                <p ><a class="about_read-more" href="{{ url_for('about') }}">Read more</a></p>
+              </div>
             </div>
           </div>
         </div>
