--- a/app/templates/knowitwall.html
+++ b/app/templates/knowitwall.html
@@ -394,11 +394,11 @@
               <div class="vertical-line about_description">
               <p class = 'justify'>Know it Wall (KiW) is a place for inquisitive minds. From sciences to arts, let world-class researchers excite your curiosity.</p>
               <br>
-              <p class = 'justify'>Based at UCL and Imperial College London, KiW works with academics to make audio and video documentaries, as well as short articles, that explain what is cool or interesting about the subjects they dedicate their lives to. From <i>Stegosaurus</i> to Shakespeare, protons to pandemics, there’s no limit to what you could encounter!</p>
+              <p class = 'justify'>Based at UCL and Imperial College London, KiW works with academics to make audio and video documentaries, as well as short articles, that explain what is cool or interesting about the subjects they dedicate their lives to. From <i>Stegosaurus</i> to Shakespeare, protons to pandemics, there’s no limit to what you could encounter! <a class="about_read-more" href="{{ url_for('about') }}">Learn more</a></p>
               </div>
-              <div>
-                <p ><a class="about_read-more" href="{{ url_for('about') }}">Read more</a></p>
-              </div>
+              <!-- <div>
+                <p ><a class="about_read-more" href="{{ url_for('about') }}">Learn more</a></p>
+              </div> -->
             </div>
           </div>
         </div>
