--- a/app/templates/episode_page.html
+++ b/app/templates/episode_page.html
@@ -308,7 +308,7 @@
             </div>
           </div>
 
-          <div class="col-lg-10 col-lg-offset-1 text-center page-scroll video_author_info" style="">
+          <div class="col-lg-10 col-lg-offset-1 text-center page-scroll video_author_info" id="author_name">
              <i style="color: white">by</i> <span class="highlight" style="background-color:transparent;color:white">{{audiodocs[0].author_name | safe}}</span> <i style="color: white">in</i> <span style="background-color:transparent; color:white"class="highlight">{{audiodocs[0].discipline}} </span>
 
         </div>
