--- a/app/templates/knowitwall.html
+++ b/app/templates/knowitwall.html
@@ -256,7 +256,7 @@
             <a href="#page-top"></a>
           </li>
           <li class="page-scroll">
-            <a href="#about_hidden_anchor">About</a>
+            <a href="{{ url_for('about') }}">About</a>
           </li>
           <!-- HACK: hidden div that activates just after the about section.
         That means that the about button in the navbar stops being highlighted when you go past
