--- a/app/static/css/about_page.css
+++ b/app/static/css/about_page.css
@@ -22,12 +22,12 @@
     font-size: 11px;
     line-height: 34px;
 }
-/* flash seminar section */
-@media(min-width:768px){
+/* flash seminar section.
+  This gets the scroll to arrive at the correct point.
+*/
   #flash_seminars{
     padding-top: 100px;
   }
-}
 #about-block_1{
   margin-top:12px;
   border-radius:6px;
@@ -51,6 +51,9 @@
  @media(max-width:768px) {
   #about_page-left #about_page-right{
    font-size: 1em;
+  }
+  .about_description {
+      line-height: 30px;
   }
 }
 .about_page-left_wrapper{
@@ -100,7 +103,7 @@ h3{
 .flash_sem_description{
   color: #3e3e3e;
   text-align: center;
-  line-height: 31px;
+  line-height: 30px;
 }
 .flash_sem_sessions{
   background-color: white;
