about page og fix

--- a/app/templates/about_page.html
+++ b/app/templates/about_page.html
@@ -13,7 +13,7 @@
   <meta property="og:image" content="{{config.AWS_URL}}/static/Images/KiW_banner.jpg" />
   <meta property="og:title" content="About Know it Wall" />
   <meta property="og:description" content="About Know it Wall" />
-  <meta property="og:url" content="http://knowitwall.com/all_episodes" />
+  <meta property="og:url" content="http://knowitwall.com/about" />
   <meta property=”og:type” content=”website” />
   <link rel="icon" href="{{config.AWS_URL}}/static/Images/KIW-thumbnail_logo.png" type="image/gif" sizes="16x16">
 <!-- pens -->
