--- a/app/templates/about_page.html
+++ b/app/templates/about_page.html
@@ -11,8 +11,8 @@
   <meta name="keywords" content="Knowitwall, Know It Wall, audio-documentary, audiodoc, outreach, academia, insightful, science, humanities">
   <meta name="author" content="">
   <meta property="og:image" content="{{config.AWS_URL}}/static/Images/KiW_banner.jpg" />
-  <meta property="og:title" content="Know it Wall: A Place for Inquisitive Minds"/>
-  <meta property="og:description" content="About Know it Wall" />
+  <meta property="og:title" content="Know it Wall" />
+  <meta property="og:description" content="Know it Wall: A Place for Inquisitive Minds" />
   <meta property="og:url" content="http://knowitwall.com/about" />
   <meta property=”og:type” content=”website” />
   <link rel="icon" href="{{config.AWS_URL}}/static/Images/KIW-thumbnail_logo.png" type="image/gif" sizes="16x16">
