flash seminar description change

--- a/app/templates/about_page.html
+++ b/app/templates/about_page.html
@@ -319,8 +319,7 @@ hidden
     <div class="row">
       <div class="col-md-8 col-md-offset-2">
         <p class="flash_sem_description">
-          Flash seminars are one-off discussion that bring together residents and students of London to explore thought-provoking topics
-          featured on Know it Wall. They aim to provide creative, welcoming, and collaborative learning spaces for learning in the city.
+          Flash Seminars are one-off discussions that bring the people of London together to explore thought-provoking topics featured on Know it Wall. Anyone is welcome to come and join the discussion (it's free!), which is led by an academic who is a leader in the topic of the Flash Seminar.
         </p>
       </div>
     </div>
