about KiW description edit

--- a/app/templates/about_page.html
+++ b/app/templates/about_page.html
@@ -279,7 +279,7 @@ hidden
         <div class="vertical-line_right about_description">
         <p class = 'justify'>It is estimated that well over two million academic papers are published each year and there are countless more university lectures. Who is accessing this knowledge? Academics within the same disciplines and their students. Why should it only be them? We couldn't think of a good reason either!</p>
         <br>
-        <p class = 'justify'>KiW's aim is to take the research that is going on at top universities and present it to the general public in an accessible and engaging way. At KiW, you will find audio and video documentaries, as well as short articles, about the latest research in the humanities and sciences —  all written by academics actively doing research in those fields.</p>
+        <p class = 'justify'>The mission of Know it Wall (KiW) is to take the research that is going on at top universities and present it to the general public in an accessible and engaging way. At KiW, you will find audio and video documentaries, as well as short articles, about the latest research in the humanities and sciences —  all written by academics actively doing research in those fields.</p>
         </div>
       </div>
     </div>
