--- a/app/templates/knowitwall.html
+++ b/app/templates/knowitwall.html
@@ -9,12 +9,12 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Know it Wall is a place for inquisitive minds. From sciences to arts, let world-class researchers excite your curiosity.">
+  <meta name="description" content="Know it Wall is a place for inquisitive minds. From the sciences to the humanities, let world-class researchers excite your curiosity.">
   <meta name="keywords" content="Knowitwall, Know It Wall, audio-documentary, audiodoc, outreach, academia, insightful, science, humanities">
   <meta name="author" content="">
   <meta property="og:image" content="{{config.AWS_URL}}/static/Images/KiW_banner.jpg"/>
   <meta property="og:title" content="Know It Wall" />
-  <meta property="og:description" content="Know it Wall is a place for inquisitive minds. From sciences to arts, let world-class researchers excite your curiosity." />
+  <meta property="og:description" content="Know it Wall is a place for inquisitive minds. From the sciences to the humanities, let world-class researchers excite your curiosity." />
   <meta property="og:url" content="http://knowitwall.com/" />
   <link rel="icon" href="{{config.AWS_URL}}/static/Images/KIW-thumbnail_logo.png" type="image/gif" sizes="16x16">
 <!-- pens -->
@@ -392,7 +392,7 @@
             </div>
             <div class="col-md-6">
               <div class="vertical-line about_description">
-              <p class = 'justify'>Know it Wall (KiW) is a place for inquisitive minds. From sciences to arts, let world-class researchers excite your curiosity.</p>
+              <p class = 'justify'>Know it Wall (KiW) is a place for inquisitive minds. From the sciences to the humanities, let world-class researchers excite your curiosity.</p>
               <br>
               <p class = 'justify'>Based at UCL and Imperial College London, KiW works with academics to make audio and video documentaries, as well as short articles, that explain what is cool or interesting about the subjects they dedicate their lives to. From <i>Stegosaurus</i> to Shakespeare, protons to pandemics, there’s no limit to what you could encounter! <a class="about_read-more" href="{{ url_for('about') }}">Learn more</a></p>
               </div>
