migrant crisis is 'featured episode' as flash seminar in 2 days

--- a/app/templates/knowitwall.html
+++ b/app/templates/knowitwall.html
@@ -323,7 +323,7 @@
                    <i class="fa fa-film audio-film_label_landing_page" aria-hidden="true" style="font-size:18px;"></i>
                  </div>
                  {% endif %}
-                 <div class="btn btn-secondary latest_landing_page" style="">LATEST EPISODE</div>
+                 <div class="btn btn-secondary latest_landing_page" style="">FEATURED EPISODE</div>
                 </div>
               </div>
             </div>
