flash seminar now changed to 'previous session'

--- a/app/templates/about_page.html
+++ b/app/templates/about_page.html
@@ -324,7 +324,7 @@ hidden
       </div>
     </div>
 
-    <p class="upcoming_session">Upcoming Session:</p>
+    <p class="upcoming_session">Previous Session:</p>
 
     <div class="flash_sem_sessions">
       <div>
