--- a/app/templates/knowitwall.html
+++ b/app/templates/knowitwall.html
@@ -312,17 +312,20 @@
                  </p>
                <div class="homepage_hidden_info">
                  <p class="homepage_box_abstract homepage_box_abstract_first">{{elem.topic_description | safe}}</p>
-                 {% if elem.audio_mp3 %}
-                 <!-- audio label -->
-                 <div class="label_wrapper_landing_page audio_label_wrapper_landing_page">
-                   <i class="fa fa-volume-up audio-film_label_landing_page" aria-hidden="true" style="font-size:18px;"></i>
+
+                 <div class="audio_video_tag_div_landing_page">
+                   {% if elem.video_embed %}
+                   <div class="label_wrapper_landing_page film_label_wrapper_landing_page">
+                     <i class="fa fa-film audio-film_label_landing_page" aria-hidden="true" style="font-size:18px;"></i>
+                   </div>
+                   {% endif %}
+                   {% if elem.audio_mp3 %}
+                   <!-- audio label -->
+                   <div class="label_wrapper_landing_page audio_label_wrapper_landing_page">
+                     <i class="fa fa-volume-up audio-film_label_landing_page" aria-hidden="true" style="font-size:18px;"></i>
+                   </div>
+                   {% endif %}
                  </div>
-                 {% endif %}
-                 {% if elem.video_embed %}
-                 <div class="label_wrapper_landing_page film_label_wrapper_landing_page">
-                   <i class="fa fa-film audio-film_label_landing_page" aria-hidden="true" style="font-size:18px;"></i>
-                 </div>
-                 {% endif %}
                  <div class="btn btn-secondary latest_landing_page" style="">FEATURED EPISODE</div>
                 </div>
               </div>
@@ -356,16 +359,20 @@
                    </p>
                  <div class="homepage_hidden_info">
                    <p class="homepage_box_abstract">{{elem.topic_description | safe}}</p>
-                   {% if elem.audio_mp3 %}
-                   <div class="label_wrapper audio_label_wrapper">
-                     <i class="fa fa-volume-up audio-film_label" aria-hidden="true"></i>
-                   </div>
-                   {% endif %}
-                   {% if elem.video_embed %}
-                   <div class="label_wrapper film_label_wrapper">
-                     <i class="fa fa-film audio-film_label" aria-hidden="true"></i>
-                   </div>
-                   {% endif %}
+
+                   <div class="audio_video_tag_div">
+                     {% if elem.video_embed %}
+                     <div class="label_wrapper film_label_wrapper">
+                       <i class="fa fa-film audio-film_label" aria-hidden="true"></i>
+                     </div>
+                     {% endif %}
+                     {% if elem.audio_mp3 %}
+                     <div class="label_wrapper audio_label_wrapper">
+                       <i class="fa fa-volume-up audio-film_label" aria-hidden="true"></i>
+                     </div>
+                     {% endif %}
+                 </div>
+
                   </div>
                 </div>
               </div>
