--- a/app/templates/episode_page.html
+++ b/app/templates/episode_page.html
@@ -135,6 +135,11 @@
 
         </div>
       </div>
+
+      <!-- <div class="preview_episode_admin">
+        <p>PREVIEWED EPISODE</p>
+      </div> -->
+
       </div>
     </header>
     <!-- header with the video player. JQuery inserts the iframe -->
@@ -155,6 +160,11 @@
            <i style="color: {{audiodocs[0].by_in_colour}}">by</i> <a href="#author" class="highlight">{{audiodocs[0].author_name | safe}}</a> <i style="color: {{audiodocs[0].by_in_colour}}">in</i> <span class="highlight">{{audiodocs[0].discipline}} </span>
       </div>
     </div>
+
+    <!-- <div class="preview_episode_admin">
+      <p>PREVIEWED EPISODE</p>
+    </div> -->
+
     <div class="row arrow_row">
       <div class="col-lg-10 col-lg-offset-1 text-center page-scroll" style="color: black; font-size:125%">
         <a class="arrow-wrap a_arrow" href="#episodes">
