--- a/app/templates/knowitwall.html
+++ b/app/templates/knowitwall.html
@@ -149,6 +149,9 @@
                  </div>
                  <div class="btn btn-secondary latest_landing_page" style="">FEATURED EPISODE</div>
                 </div>
+                <!-- <div class="preview_episode_admin">
+                  <p>PREVIEWED EPISODE</p>
+                </div> -->
               </div>
             </div>
             </a>
@@ -193,8 +196,10 @@
                      </div>
                      {% endif %}
                  </div>
-
                   </div>
+                  <!-- <div class="preview_episode_admin">
+                    <p>PREVIEWED EPISODE</p>
+                  </div> -->
                 </div>
               </div>
           </a>
